// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`show output from task should be able to change collapse settings: test-e2e-8TNRrm8bI9ndz4jrhYC492luGNhtMTmZ-err 1`] = `Array []`;

exports[`show output from task should be able to change collapse settings: test-e2e-8TNRrm8bI9ndz4jrhYC492luGNhtMTmZ-exit 1`] = `Array []`;

exports[`show output from task should be able to change collapse settings: test-e2e-8TNRrm8bI9ndz4jrhYC492luGNhtMTmZ-out 1`] = `
Array [
  Array [
    "◼ This task will execute.  
",
  ],
  Array [
    "[2K[1A[2K[G◼ This task will execute.
◼ This task will execute.  
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[G❯ This task will execute.
◼ This task will execute.  
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[G❯ This task will execute.

◼ This task will execute.  
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[1A[2K[G❯ This task will execute.
  ◼ This is a subtask.
◼ This task will execute.  
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[1A[2K[G❯ This task will execute.
  ◼ This is a subtask.
  ◼ This is an another subtask.
◼ This task will execute.  
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[1A[2K[1A[2K[G❯ This task will execute.
  ❯ This is a subtask.
  ◼ This is an another subtask.
◼ This task will execute.  
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[1A[2K[1A[2K[G❯ This task will execute.
  ✔ This is a subtask.
  ◼ This is an another subtask.
◼ This task will execute.  
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[1A[2K[1A[2K[G❯ This task will execute.
  ✔ This is a subtask.
  ❯ This is an another subtask.
◼ This task will execute.  
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[1A[2K[1A[2K[G❯ This task will execute.
  ✔ This is a subtask.
  ✔ This is an another subtask.
◼ This task will execute.  
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[1A[2K[1A[2K[G✔ This task will execute.
◼ This task will execute.  
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[G✔ This task will execute.
❯ This task will execute.  
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[G✔ This task will execute.
❯ This task will execute.
  
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[1A[2K[G✔ This task will execute.
❯ This task will execute.
  ◼ This is a subtask.  
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[1A[2K[G✔ This task will execute.
❯ This task will execute.
  ◼ This is a subtask.
  ◼ This is an another subtask.  
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[1A[2K[1A[2K[G✔ This task will execute.
❯ This task will execute.
  ❯ This is a subtask.
  ◼ This is an another subtask.  
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[1A[2K[1A[2K[G✔ This task will execute.
❯ This task will execute.
  ✔ This is a subtask.
  ◼ This is an another subtask.  
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[1A[2K[1A[2K[G✔ This task will execute.
❯ This task will execute.
  ✔ This is a subtask.
  ❯ This is an another subtask.  
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[1A[2K[1A[2K[G✔ This task will execute.
❯ This task will execute.
  ✔ This is a subtask.
  ✔ This is an another subtask.  
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[1A[2K[1A[2K[G✔ This task will execute.
✔ This task will execute.  
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[G✔ This task will execute.
✔ This task will execute. 
",
  ],
]
`;

exports[`show output from task should be able to change concurrency setting in subtask, second subtask should finish first: test-e2e-3ygUxrTkCDLDfDrXzF1ocWR6626jaL0k-err 1`] = `Array []`;

exports[`show output from task should be able to change concurrency setting in subtask, second subtask should finish first: test-e2e-3ygUxrTkCDLDfDrXzF1ocWR6626jaL0k-exit 1`] = `Array []`;

exports[`show output from task should be able to change concurrency setting in subtask, second subtask should finish first: test-e2e-3ygUxrTkCDLDfDrXzF1ocWR6626jaL0k-out 1`] = `
Array [
  Array [
    "◼ This task will execute.  
",
  ],
  Array [
    "[2K[1A[2K[G❯ This task will execute.  
",
  ],
  Array [
    "[2K[1A[2K[G❯ This task will execute.
  
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[G❯ This task will execute.
  ◼ This is a subtask.  
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[G❯ This task will execute.
  ◼ This is a subtask.
  ◼ This is an another subtask.  
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[1A[2K[G❯ This task will execute.
  ❯ This is a subtask.
  ◼ This is an another subtask.  
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[1A[2K[G❯ This task will execute.
  ❯ This is a subtask.
  ❯ This is an another subtask.  
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[1A[2K[G❯ This task will execute.
  ❯ This is a subtask.
  ✔ This is an another subtask.  
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[1A[2K[G❯ This task will execute.
  ✔ This is a subtask.
  ✔ This is an another subtask.  
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[1A[2K[G✔ This task will execute.  
",
  ],
  Array [
    "[2K[1A[2K[G✔ This task will execute. 
",
  ],
]
`;

exports[`show output from task should create a set of subtasks: test-e2e-JQYWVb3x1scokQK2IzhwA4F0qxWbYzXR-err 1`] = `Array []`;

exports[`show output from task should create a set of subtasks: test-e2e-JQYWVb3x1scokQK2IzhwA4F0qxWbYzXR-exit 1`] = `Array []`;

exports[`show output from task should create a set of subtasks: test-e2e-JQYWVb3x1scokQK2IzhwA4F0qxWbYzXR-out 1`] = `
Array [
  Array [
    "◼ This task will execute.  
",
  ],
  Array [
    "[2K[1A[2K[G❯ This task will execute.  
",
  ],
  Array [
    "[2K[1A[2K[G❯ This task will execute.
  
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[G❯ This task will execute.
  ◼ This is a subtask.  
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[G❯ This task will execute.
  ◼ This is a subtask.
  ◼ This is a subtask.  
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[1A[2K[G❯ This task will execute.
  ❯ This is a subtask.
  ◼ This is a subtask.  
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[1A[2K[G❯ This task will execute.
  ✔ This is a subtask.
  ◼ This is a subtask.  
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[1A[2K[G❯ This task will execute.
  ✔ This is a subtask.
  ❯ This is a subtask.  
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[1A[2K[G❯ This task will execute.
  ✔ This is a subtask.
  ✔ This is a subtask.  
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[1A[2K[G✔ This task will execute.  
",
  ],
  Array [
    "[2K[1A[2K[G✔ This task will execute. 
",
  ],
]
`;
